i declard the keyword let

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         "use strict"
 
         let a = 34
-        b = 234
+        let b = 234
         console.log(a,b);
+
     </script>
 
 </body>
