--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         let b = 234
         console.log(a,b);
 
+        let number = Number.MAX_SAFE_INTEGER
+        console.log(number);
+
     </script>
 
 </body>
