unary plus and unary negation working

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         let number = Number.MAX_SAFE_INTEGER
         console.log(number);
 
+        console.log(+'923847');
+        console.log(-"923847");
+        console.log(!false);
+
+        let c = null
+        console.log(c ,typeof c);
+
+
+        
+
     </script>
 
 </body>
