--- a/increment and decrement.html
+++ b/increment and decrement.html
@@ -23,6 +23,10 @@
         ++b 
         --a
         console.log(a); // 2
+
+        a = a++ + a++
+
+        console.log(a);
     </script>
 </body>
 </html>
