inner and outer function works

--- a/function.html
+++ b/function.html
@@ -8,50 +8,66 @@
 <body>
     <h1>Functions</h1>
     <script>
-        main();
-        function main(){
-            console.log("main starts");
-            m1()
-            console.log("main ends");
+        // main();
+        // function main(){
+        //     console.log("main starts");
+        //     m1()
+        //     console.log("main ends");
+        // }
+
+        // function m1(){
+        //     console.log("m1 starts");
+        //     return
+        //     console.log("m1 ends");
+        // }
+
+        // main1()
+        // function main1(){
+        //     let a =10
+        //     m2(a)
+        //     console.log(a);
+        //     console.log("aisjdhf",m2(a));
+
+        // }
+        // function m2(a){
+        //     a=a*10
+        //     console.log(a);
+        // }
+
+
+        // let a = +prompt("enter a number1")
+        // let b = +prompt("enter a number2")
+
+        // let result = calc(a,b,add)
+        // console.log(`${a} + ${b} --> ${result}`);
+
+
+        // function calc(a,b,caltype){
+        //     return res=caltype(a,b)
+        // }
+
+        // function add(n1,n2){
+        //     return res=n1+n2
+        // }
+        // function sub(n1,n2){
+        //     return res=n1-n2
+        // }
+
+        //Inner function and outer function
+
+
+        function outer(){
+            let a = 23
+
+            function inner(){
+                let b = 40
+                console.log(a,b);
+            }
+            return inner;
         }
-
-        function m1(){
-            console.log("m1 starts");
-            return
-            console.log("m1 ends");
-        }
-
-        main1()
-        function main1(){
-            let a =10
-            m2(a)
-            console.log(a);
-            console.log("aisjdhf",m2(a));
-
-        }
-        function m2(a){
-            a=a*10
-            console.log(a);
-        }
-
-
-        let a = +prompt("enter a number1")
-        let b = +prompt("enter a number2")
-
-        let result = calc(a,b,add)
-        console.log(`${a} + ${b} --> ${result}`);
-
-
-        function calc(a,b,caltype){
-            return res=caltype(a,b)
-        }
-
-        function add(n1,n2){
-            return res=n1+n2
-        }
-        function sub(n1,n2){
-            return res=n1-n2
-        }
+        let n1 = outer()
+        console.log(n1);
+        n1()
         
        
     </script>
