--- a/functions.html
+++ b/functions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Function</title>
+    <title>Functions</title>
 </head>
 <body>
     <h1>Functions</h1>
@@ -97,31 +97,41 @@
         //     console.log("main ends");
         // }
 
-        main()
-        function main(){
-            let i = 0
-            let j = 0
-            j=m1(++i)+m1(i++)
-            console.log(i,j);
+        // main()
+        // function main(){
+        //     let i = 0
+        //     let j = 0
+        //     j=m1(++i)+m1(i++)
+        //     console.log(i,j);
+        // }
+        // function m1(a){
+        //     return ++a;
+        // }
+
+
+        // //synchronous code executed
+        // console.log("synchronous---->");
+        // console.log("hi");
+        // console.log("how are you?");
+        // console.log("what is your next plan?");
+
+        // //asynchronous code executed
+        // console.log("asynchronous---->");
+        // console.log("hello");
+        // setTimeout(function(){
+        //     console.log("helloworld");
+        // },2000)
+        // console.log("world");
+    
+        //pure function
+        function add(a,b){
+            return a+b
         }
-        function m1(a){
-            return ++a;
-        }
-
-
-        //synchronous code executed
-        console.log("synchronous---->");
-        console.log("hi");
-        console.log("how are you?");
-        console.log("what is your next plan?");
-
-        //asynchronous code executed
-        console.log("asynchronous---->");
-        console.log("hello");
-        setTimeout(function(){
-            console.log("helloworld");
-        },2000)
-        console.log("world");
+        console.log(add(2,3));
+        console.log(add(2,3));
+        console.log(add(2,3));
+        console.log(add(2,3));
+        console.log(add(2,3));
 
 
         
